Every proplem is solved and for now this is the latest commit

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "bwpEhrb9MbCm6JDW4JMvPZ1HGHvxpbVe",
+    "Issuer": "Merlot_Hotel",
+    "Audience": "Merlot_Hotel"
+  }
 }
